data/Java/17-reach-eof/3/[M]Error.txt
*https://www.tutorialspoint.com/java/java_object_classes.htm
Puppy.java:31: error: reached end of file while parsing
}
 ^